--- a/action.yml
+++ b/action.yml
@@ -4,8 +4,8 @@ branding:
   icon: 'cloud'
   color: 'orange'
 inputs:
-  bucket-prefix:
-    description: 'Prefix of the bucket name. The PR number will be appended to this value.'
+  bucket-name:
+    description: 'Name of the S3 bucket used to store bundles.'
     required: true
   folder-to-copy:
     description: 'Folder to copy assets from into S3.'
